--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,18 @@
+# Secret api key the google api maps
 GOOGLE_MAPS_API_KEY=AIzaSyDL-y7dKo4sHj0tzqTcJ7P2Hdp9UlLZ6Ao
+
+# Secret key django
+SECRET_KEY= django-insecure-3q*vbqun*_f6v8^zef68zzhvknp7h5&(g9=ek@!zyd6p8o!e2l
+
+# Debug
+DEBUG=True
+
+# DATA BASE
+DB_NAME=localbites
+DB_USER=localbites
+DB_PASSWORD=Proyectotitulo123
+DB_HOST=localbites-svflex.mysql.database.azure.com
+DB_PORT=3306
+
+#Allowed hosts
+ALLOWED_HOSTS=127.0.0.1,localhost
