--- a/backend/.env
+++ b/backend/.env
@@ -15,4 +15,4 @@ DB_HOST=localbites-svflex.mysql.database.azure.com
 DB_PORT=3306
 
 #Allowed hosts
-ALLOWED_HOSTS=127.0.0.1,localhost
+ALLOWED_HOSTS=127.0.0.1,localhost, https://local-bites-backend.onrender.com/
