change img cloudi

--- a/backend/.env
+++ b/backend/.env
@@ -1,18 +1,21 @@
-# Secret api key the google api maps
+# Secret API Key de Google Maps
 GOOGLE_MAPS_API_KEY=AIzaSyDL-y7dKo4sHj0tzqTcJ7P2Hdp9UlLZ6Ao
 
-# Secret key django
-SECRET_KEY= django-insecure-3q*vbqun*_f6v8^zef68zzhvknp7h5&(g9=ek@!zyd6p8o!e2l
+# Secret Key de Django
+SECRET_KEY=django-insecure-3q*vbqun*_f6v8^zef68zzhvknp7h5&(g9=ek@!zyd6p8o!e2l
 
-# Debug
+# Debug Mode
 DEBUG=True
 
-# DATA BASE
+# Configuración de la Base de Datos
 DB_NAME=localbites
 DB_USER=localbites
 DB_PASSWORD=Proyectotitulo123
 DB_HOST=localbites-svflex.mysql.database.azure.com
 DB_PORT=3306
 
-#Allowed hosts
-ALLOWED_HOSTS=127.0.0.1,localhost, https://local-bites-backend.onrender.com/
+# Configuración de Cloudinary
+CLOUDINARY_URL=cloudinary://685148611295127:-_CYCC4xrwLQne7UMjuLV0NKtag@dka3j5hvp
+
+# Configuración de Hosts Permitidos
+ALLOWED_HOSTS=127.0.0.1,localhost,local-bites-backend.onrender.com
